@@ -1,3 +1,11 @@
+2009-05-22  Gary Benson  <gbenson@redhat.com>
+
+	* patches/icedtea-zero.patch
+	(vmError.cpp): Don't include interpreterRuntime.hpp here.
+	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
+	Include interpreterRuntime.hpp and scopeDesc.hpp.
+	(ZeroStackPrinter::print_word): Decode pc to get bci.
+
 2009-05-21  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp:
